<resources>
    <string name="app_name">Eq2LDM</string>
    <string name="emailt">Usuario</string>
    <string name="passwort">Contraseña</string>
    <string name="entrada">Ingresar</string>
    <string name="crear">Registrate</string>
    <string name="emailts">Email de usuario</string>
    <string name="passworts">Password</string>
    <string name="confirmapasst">Confirma Password</string>
    <string name="reg">Registro</string>
    <string name="inic">Inicia sesión!</string>
    <string name="error_correo">Tu correo no está verificado, no puedes ingresar!</string>
    <string name="ok">Aceptar</string>
    <string name="Datos_inc">Datos incorrectos, verificalos nuevamente</string>
    <string name="error">Alerta</string>
    <string name="Oblig">Es OBLIGATORIO llenar todos los datos</string>
    <string name="error_email">Revisa tu correo electrónico para continuar con la validación</string>
    <string name="error_verif">No se ha podido continuar con la verificación</string>
    <string name="segur">Estás por cerrar sesión en tu cuenta ¿Está seguro que deseas continuar?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="idioma">Idioma</string>
    <string name="lang_set">Idioma configurado a Español</string>
    <string name="proximamente">Función disponible próximamente!</string>
    <string name="bienvenido">BIENVENIDO!</string>
    <string name="opcion">ELIGE UNA OPCIÓN</string>
    <string name="chat">Empieza a chatear!</string>
    <string name="mi_usuario">Mi usuario</string>
    <string name="idiomas">Idioma</string>
    <string name="sesioff">Cierra sesión</string>
    <string name="rolus">Roles de usuario</string>
    <string name="user">Usuario</string>
    <string name="admin">Administrador</string>
    <string name="role">ELIGE UN ROL</string>
    <string name="adminmode">Ahora estás en modo Admin!</string>
    <string name="FB">Usuarios </string>
    <string name="FS">Roles </string>
    <string name="ushint">ID de usuario </string>
    <string name="salus">DEFINE TU PERFIL! </string>
    <string name="usfot">Elige una foto de perfil </string>
    <string name="usid">Escribe tu nombre de usuario </string>
    <string name="uscon">Confirmar y guardar datos </string>
</resources>